--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Su Myat Noe Zin- Resume (DevOps Engineer)</title>
     <meta name="keywords" content="Resume, DevOps Engineer, John Doe, IT Professional" />
     <meta name="description"
-        content="Hello, I'm John Doe. This is my latest resume, showcasing my experience and skills as a DevOps Engineer. Feel free to contact me. Thank you for visiting :).">
+        content="Hello, I'm Su Myat Noe Zin. This is my latest resume, showcasing my experience and skills as a DevOps Engineer. Feel free to contact me. Thank you for visiting :).">
 
     <link rel="stylesheet" href="css/resume.css?v=1.0.0" />
     <link rel="stylesheet" href="css/animate.css" />
